# video-face-tracking

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  run_docker.sh  setup_cuda.sh
scripts/: crop_faces.py  demo.py  detect_faces.py  reduce_size.py  trim_faces.py  view_annotations.py
src/: draw.py  face_tracker.py  image.py  path.py  utils.py  video.py
