[project]
name = "video-face-tracking"
version = "0.1.0"
description = "Face tracking for video datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "insightface>=0.7.3",
    "nvidia-cublas-cu12>=12.4.5.8",
    "nvidia-cuda-nvrtc-cu12>=12.4.127",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "nvidia-cufft-cu12>=11.2.1.3",
    "nvidia-curand-cu12>=10.3.5.147",
    "onnxruntime-gpu>=1.20.1",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
